Refactor: Handler
